--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       RAILS_ENV: development
       BUNDLE_PATH: /usr/local/bundle/gems
-    command: bundle exec rails s -b 0.0.0.0
+    # command: bundle exec rails s -b 0.0.0.0
   db:
     image: postgres:14.1
     ports:
