Add login and resgister

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,9 @@ Style/Documentation:
 Layout/LineLength:
   Max: 130
   AllowURI: true
+  Exclude:
+    - 'spec/**/*'
+    - 'config/**/*'
 
 Metrics/MethodLength:
   Max: 25
@@ -29,6 +32,7 @@ Metrics/BlockLength:
   Max: 50
   Exclude:
     - 'spec/**/*'
+    - 'config/**/*'
 
 Metrics/AbcSize:
   Enabled: false
